pkgs/typed-racket-pkgs/typed-racket-tests/tests/typed-racket/fail/multiple-annotations-define.rkt
#;
(exn-pred 1 "Body had type:.*Variable had type:.*")
#lang typed/racket


(: a Integer)
(: b String)
(define-values (a b c) (values 1 2 3))
